--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -20,16 +20,19 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s4I-cT-aVU">
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <items>
-                                    <barButtonItem title="Camera" id="dB4-hc-Noc">
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="rqC-Rg-xJT"/>
+                                    <barButtonItem systemItem="camera" id="dB4-hc-Noc">
                                         <connections>
                                             <action selector="takePhoto:" destination="BYZ-38-t0r" id="jZT-Ql-9Sw"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="JVN-4b-UH5"/>
                                     <barButtonItem title="Library" id="OEQ-CC-ino">
                                         <connections>
                                             <action selector="chooseFromLibrary:" destination="BYZ-38-t0r" id="RVT-En-UlH"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="9OZ-yq-LC9"/>
                                 </items>
                             </toolbar>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EWh-Ph-wvf">
