--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iOa-3M-NXb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iI8-tw-5go">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Meme Editor View Controller-->
+        <!--Editor-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MemeEditorViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Editor" id="BYZ-38-t0r" customClass="MemeEditorViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -113,12 +113,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1114" y="349"/>
+            <point key="canvasLocation" x="1187" y="-392"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Editor-->
         <scene sceneID="p53-Jd-aoJ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iOa-3M-NXb" sceneMemberID="viewController">
+                <navigationController title="Editor" automaticallyAdjustsScrollViewInsets="NO" id="iOa-3M-NXb" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Editor" id="7W3-6X-swU"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="eXv-gP-a58">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -131,7 +132,78 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yIi-lt-jfO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="332" y="-344"/>
+            <point key="canvasLocation" x="504" y="-392"/>
+        </scene>
+        <!--History-->
+        <scene sceneID="mQO-Ps-es0">
+            <objects>
+                <navigationController title="History" id="Ddg-HS-Sji" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="history" id="DhL-dS-0a1"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6yb-i5-HJz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="n4E-hQ-cpz" kind="relationship" relationship="rootViewController" id="wZU-nK-cCR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xed-EW-vhg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="504" y="325"/>
+        </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="YfC-0u-pov">
+            <objects>
+                <collectionViewController id="n4E-hQ-cpz" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Dyc-ac-YG3">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8Gk-h0-Ggd">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="pfG-NY-teC">
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="n4E-hQ-cpz" id="RMh-2j-4IY"/>
+                            <outlet property="delegate" destination="n4E-hQ-cpz" id="XU1-0O-jsT"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="3cw-sM-a95"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I7R-vY-87I" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1160" y="292"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="EPN-kc-QdC">
+            <objects>
+                <tabBarController id="iI8-tw-5go" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="cO6-qL-33Z">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="iOa-3M-NXb" kind="relationship" relationship="viewControllers" id="Qyy-MX-czq"/>
+                        <segue destination="Ddg-HS-Sji" kind="relationship" relationship="viewControllers" id="veN-7V-GOH"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BFp-Zj-DNL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-228" y="-392"/>
         </scene>
     </scenes>
 </document>
